init all sub applications

--- a/src/main/resources/webserver/template/automation/admin/headline.html
+++ b/src/main/resources/webserver/template/automation/admin/headline.html
@@ -1,7 +1,7 @@
 <header>
     <div class="ui fixed inverted menu large">
         <a onclick="$('.ui.labeled.icon.sidebar').sidebar('toggle')"  class="header item">
-            <img src="/static/img/icon/smart.png" width="32" height="32" class="logo">
+            <img src="/static/img/icon/automation.png" width="32" height="32" class="logo">
             Automatisierung Admin
         </a>
     </div>
@@ -9,11 +9,11 @@
 <aside>
     <div class="ui left vertical inverted sidebar labeled icon menu scale down">
         <a href="/automation/index" class="item">
-            <img src="/static/img/icon/smart.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            <img src="/static/img/icon/automation.png" width="64" height="64" class="logo" style="margin: 0 auto;">
             Automatisierung
         </a>
         <a href="/automation/admin/index" class="item {% if module == 'admin' %}active{% endif %}">
-            <img src="/static/img/icon/smart.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            <img src="/static/img/icon/automation.png" width="64" height="64" class="logo" style="margin: 0 auto;">
             Automatisierung Admin
         </a>
         <a href="/automation/admin/device" class="item {% if module == 'device' %}active{% endif %}">
