--- a/src/main/resources/webserver/template/automation/user/headline.html
+++ b/src/main/resources/webserver/template/automation/user/headline.html
@@ -1,7 +1,7 @@
 <header>
     <div class="ui fixed inverted menu large">
         <a onclick="$('.ui.labeled.icon.sidebar').sidebar('toggle')" class="header item">
-            <img src="/static/img/icon/smart.png" width="32" height="32" class="logo">
+            <img src="/static/img/icon/automation.png" width="32" height="32" class="logo">
             Automatisierung
         </a>
         <div class="right menu">
