--- a/src/main/resources/webserver/template/global/user/index.html
+++ b/src/main/resources/webserver/template/global/user/index.html
@@ -23,7 +23,7 @@
         <div class="ui link cards four column doubling stackable">
             <div class="card" onclick="window.location = '/automation/index'">
                 <div class="image">
-                    <img src="/static/img/icon/smart.png">
+                    <img src="/static/img/icon/automation.png">
                 </div>
                 <div class="content">
                     <div class="header">Automatisierung</div>
@@ -37,17 +37,17 @@
                     <div class="header">Filme</div>
                 </div>
             </div>
-            <div class="card" onclick="window.location = '/audio/index'">
+            <div class="card" onclick="window.location = '/music/index'">
                 <div class="image">
-                    <img src="/static/img/icon/audio.png">
+                    <img src="/static/img/icon/music.png">
                 </div>
                 <div class="content">
                     <div class="header">Musik</div>
                 </div>
             </div>
-            <div class="card" onclick="window.location = '/photo/index'">
+            <div class="card" onclick="window.location = '/picture/index'">
                 <div class="image">
-                    <img src="/static/img/icon/photo.png">
+                    <img src="/static/img/icon/picture.png">
                 </div>
                 <div class="content">
                     <div class="header">Bilder</div>
@@ -77,9 +77,9 @@
                     <div class="header">Kalender</div>
                 </div>
             </div>
-            <div class="card" onclick="window.location = '/contacts/index'">
+            <div class="card" onclick="window.location = '/contact/index'">
                 <div class="image">
-                    <img src="/static/img/icon/contacts.png">
+                    <img src="/static/img/icon/contact.png">
                 </div>
                 <div class="content">
                     <div class="header">Kontakte</div>
