--- a/src/main/resources/webserver/template/sidebar.html
+++ b/src/main/resources/webserver/template/sidebar.html
@@ -5,19 +5,19 @@
             SmartHome
         </a>
         <a href="/automation/index" class="item  {% if module == 'automation' %}active{% endif %}">
-            <img src="/static/img/icon/smart.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            <img src="/static/img/icon/automation.png" width="64" height="64" class="logo" style="margin: 0 auto;">
             Automatisierung
         </a>
         <a href="/movie/index" class="item {% if module == 'movie' %}active{% endif %}">
             <img src="/static/img/icon/movie.png" width="64" height="64" class="logo" style="margin: 0 auto;">
             Filme
         </a>
-        <a href="/audio/index" class="item {% if module == 'audio' %}active{% endif %}">
-            <img src="/static/img/icon/audio.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+        <a href="/music/index" class="item {% if module == 'music' %}active{% endif %}">
+            <img src="/static/img/icon/music.png" width="64" height="64" class="logo" style="margin: 0 auto;">
             Musik
         </a>
-        <a href="/photo/index" class="item {% if module == 'photo' %}active{% endif %}">
-            <img src="/static/img/icon/photo.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+        <a href="/picture/index" class="item {% if module == 'picture' %}active{% endif %}">
+            <img src="/static/img/icon/picture.png" width="64" height="64" class="logo" style="margin: 0 auto;">
             Bilder
         </a>
         <a href="/recipe/index" class="item {% if module == 'recipe' %}active{% endif %}">
@@ -32,8 +32,8 @@
             <img src="/static/img/icon/calendar.png" width="64" height="64" class="logo" style="margin: 0 auto;">
             Kalender
         </a>
-        <a href="/contacts/index" class="item {% if module == 'contacts' %}active{% endif %}">
-            <img src="/static/img/icon/contacts.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+        <a href="/contact/index" class="item {% if module == 'contact' %}active{% endif %}">
+            <img src="/static/img/icon/contact.png" width="64" height="64" class="logo" style="margin: 0 auto;">
             Kontakte
         </a>
     </div>
